@@ -21,9 +21,9 @@
  */
 package com.restfb.types.api;
 
-import com.restfb.types.FacebookType;
 import com.restfb.types.Message;
 import com.restfb.types.NamedFacebookType;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -34,6 +34,7 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
@@ -49,16 +50,16 @@ public class SetterGetterTestBase {
 
   public SetterGetterTestBase() {
     defaultInstances = new HashMap<Class, Object>();
-    defaultInstances.put(boolean.class, new Boolean(true));
-    defaultInstances.put(byte.class, new Byte((byte) 0));
-    defaultInstances.put(char.class, new Character('0'));
-    defaultInstances.put(short.class, new Short((short) 0));
-    defaultInstances.put(int.class, new Integer(0));
-    defaultInstances.put(long.class, new Long(0));
-    defaultInstances.put(float.class, new Float(0f));
-    defaultInstances.put(double.class, new Double(0d));
+    defaultInstances.put(boolean.class, Boolean.TRUE);
+    defaultInstances.put(byte.class, Byte.valueOf((byte) 0));
+    defaultInstances.put(char.class, Character.valueOf('0'));
+    defaultInstances.put(short.class, Short.valueOf((short) 0));
+    defaultInstances.put(int.class, Integer.valueOf(0));
+    defaultInstances.put(long.class, Long.valueOf(0));
+    defaultInstances.put(float.class, Float.valueOf(0f));
+    defaultInstances.put(double.class, Double.valueOf(0));
     defaultInstances.put(List.class, new ArrayList());
-    defaultInstances.put(String.class, new String("test"));
+    defaultInstances.put(String.class, "test");
     defaultInstances.put(NamedFacebookType.class, new NamedFacebookType());
     defaultInstances.put(Message.class, new Message());
     ignoredFields.add("serialVersionUID");
@@ -74,7 +75,7 @@ public class SetterGetterTestBase {
   public void testInstance(final Object instance) {
     List<Field> fields = Arrays.asList(instance.getClass().getDeclaredFields());
     for (Iterator<Field> iterator = fields.iterator(); iterator.hasNext();) {
-      Field field = (Field) iterator.next();
+      Field field = iterator.next();
 
       if (ignoredFields.contains(field.getName())) {
         continue;
